# pt-portal

./: .env.example  .gitignore  .prettierrc.json  CHANGELOG.md  CODEBASE_CLEANUP_GUIDE.md  CODEBASE_REFACTORING_PLAN.md  CODEBASE_STRUCTURE_GUIDE.md  CODE_AUDIT.md  CODE_MAINTENANCE_CHECKLIST.txt  CONTRIBUTING.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LMS_ENHANCEMENTS.md  LMS_IMPROVEMENTS.md  MANUAL_ENTRY_FIX.md  MINIO_BACKEND_INTEGRATION_GUIDE.md  MINIO_FRONTEND_TESTING_GUIDE.md  MINIO_IMPLEMENTATION_COMPLETE.md  ORGANIZATION_SUMMARY.md  PAYMENT_SERVICE_OPTIMIZATION.md  PK_PASSPORT_PAGES_IMPLEMENTATION.md  README.md  REFRESH_LOOP_FIX_SUMMARY.md  RELEASE_NOTES_V1.0.0.md  SECURITY_AUDIT_REPORT.md  SERVICE-PRICING-IMPLEMENTATION-VISUAL.md  STAFF_MANAGEMENT_QUICK_START.md  TIMECLOCK_ENHANCEMENTS.md  check-gb-pricing-combo.ts  check-gb-pricing-pages.ts  check-gb-pricing.ts  check-migration.ts  check-ticketing-tables.ts  check_pk_pages.ts  check_pk_pricing.ts  eslint.config.js  esp32-timeclock-plan.txt  find-sohail-transactions.ts  (+18 more)
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
app/: error.tsx  page.tsx  (+5 more)
frappe_apps/piyam_ims_bridge/: MANIFEST.in  README.md  pyproject.toml
frappe_apps/piyam_ims_bridge/piyam_ims_bridge/: hooks.py  modules.txt
frappe_apps/piyam_ims_bridge/piyam_ims_bridge/api/: handoff.py
frappe_apps/piyam_ims_bridge/piyam_ims_bridge/public/js/: ims_nav.js
(+934 files in other folders)
